--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "africons",
   "version": "1.0.0",
-  "description": "\u0016Set of icons representing African Brands, logos, Governments and organizations",
+  "description": "A collection of icons representing African Brands, logos and organizations",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,7 +15,8 @@
     "fonts",
     "africons",
     "africa",
-    "icons\u001b[D\u001b[D\u001b[D\u001b[D\u001b[Dbrand",
+    "icons",
+    "brands",
     "fonts",
     "free",
     "web",
